--- a/index.html
+++ b/index.html
@@ -28,20 +28,20 @@
  
   <div class="skills">
   <div class="skill-card">
-    <img src="icons/python.png" alt="Python" />
+    <img src="python.png" alt="Python" />
     <span>Python</span>
   </div>
 
   <div class="skill-card">
-    <img src="icons/c.png" alt="C/C++" />
+    <img src="c.png" alt="C/C++" />
     <span>C/C++</span>
   </div>
   <div class="skill-card">
-    <img src="icons/html.png" alt="HTML" />
+    <img src="html.png" alt="HTML" />
     <span>HTML</span>
   </div>
   <div class="skill-card">
-    <img src="icons/css.png" alt="CS" />
+    <img src="css.png" alt="CS" />
     <span>CSS</span>
   </div>
  </div>
@@ -63,3 +63,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
